--- a/bankmanager-web/package.json
+++ b/bankmanager-web/package.json
@@ -37,11 +37,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.8.6",
-    "webpack-dev-server": "3.1.14",
     "@angular/cli": "6.2.6",
     "@angular/compiler-cli": "6.1.10",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
+    "codelyzer": "^5.1.0",
     "compression-webpack-plugin": "1.1.12",
     "copy-webpack-plugin": "4.5.4",
     "fstream": "1.0.12",
@@ -50,8 +50,10 @@
     "ontimize-web-ngx-tools": "4.0.0",
     "tar": "4.4.2",
     "ts-node": "~2.0.0",
+    "tslint": "^5.17.0",
     "typescript": "2.9.2",
     "webpack": "4.18.0",
-    "webpack-cli": "3.1.0"
+    "webpack-cli": "3.1.0",
+    "webpack-dev-server": "3.1.14"
   }
 }
